<resources>
    <string name="app_name">TaskHub</string>
    <string name="action_settings">Settings</string>
    <string name="intro_header">\nWelcome to TaskHub!\n\nTap the FAB button to create a new task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_blank_fragment">Title</string>
    <string name="text_blank_fragment">Preview text</string>
    <string name="note_Text">Note</string>
    <string name="delete_text">Delete</string>
    <string name="no_note_text">Oops! Looks like you don\'t have any notes right now. \n\nTap the button in the upper corner to create one.</string>
    <string name="preview">Note Preview :</string>
    <string name="cardColor">Card Color :</string>
    <string name="textColor">Text Color :</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
